# more-see

./: .dockerignore  .env.example  .gitignore  README.md  main.py  pyproject.toml
.trae/documents/: execution-plan-ai-visual-dialog-assistant.md  prd-ai-visual-dialog-assistant.md  technical-architecture-ai-visual-dialog-assistant.md
app/: config.py  main.py
app/adapters/: ark_adapter.py  asr_adapter.py  embedding_adapter.py  langchain_ark.py  llm_adapter.py  tts_adapter.py  vision_adapter.py  volcengine_asr.py  volcengine_tts_ws.py
app/agent/: conversation_graph.py  session_store.py
app/api/: admin_cost_routes.py  auth_routes.py  http.py  http_common.py  public.py  public_routes.py  routes.py  session_routes.py  ws.py  ws_routes.py
app/auth/: __init__.py  deps.py  security.py
app/cache/: redis_client.py  session_lock_service.py
app/core/: security.py
app/graphs/: __init__.py  conversation_graph.py
app/persistence/: __init__.py  db.py  models.py  repository.py  service.py
app/repositories/: db.py  models.py  repository.py
app/routers/: admin_costs.py  api.py  auth.py  public.py  sessions.py  ws.py
app/schemas/: requests.py
app/serializers/: responses.py
app/services/: asr_stream_service.py  audio_service.py  (+9 more)
docs/: ai-visual-dialog-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
scripts/: dev.sh  init.sql
tests/: test_ark_adapters.py  test_health.py  test_langchain_adapters.py  test_vision_cache.py  test_volcengine_asr.py  test_volcengine_tts.py  test_ws_session.py
(+73 files in other folders)
