[project]
name = "more-see"
version = "0.1.0"
description = "A browser-based multimodal AI visual dialogue assistant."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2025.10.5",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.8",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
